--- a/index.html
+++ b/index.html
@@ -5,5 +5,5 @@
 layout: home
 author_profile: false
 header:
-  background: assets/images/mme_header-01.jpg
+  image: assets/images/mme_header-01.jpg
 ---
