--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
 layout: home
 author_profile: false
 header:
-  image: assets/images/mme_header-01.jpg
+  image: assets/images/mme_header-02.jpg
+  background-color: #FFFFFF
 ---
