--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 # See: https://jekyllrb.com/docs/themes/#overriding-theme-defaults
 layout: home
 author_profile: false
-header:
-  image: assets/images/mme_header.jpg
+# header:
+#   image: assets/images/mme_header-01.jpg
 ---
